[workspace]
members = ["packages/*", "contracts/*"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.12.6
"""

[profile.release.package.wallet-factory]
codegen-units = 1
incremental = false

[profile.release.package.wallet]
codegen-units = 1
incremental = false