[package]
name = "wallet-factory"
version = "0.0.1"
authors = ["Sangho Yun"]
edition = "2018"
description = "smartcontract for SPLYT"
license = "Apache-2.0"
repository = "https://github.com/yun-sangho/spylt-pay-contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
splyt = { path = "../../packages/spylt", default-features = false, version = "0.0.1"}
cw0 = { version = "0.9.1" }
cw2 = { version = "0.9.1" }
cw-storage-plus = { version = "0.9.1" }
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }